# DeepSink

./: .gitignore  .gitmodules  README.md  lora_infer.yaml  lora_merge.yaml  lora_sft.yaml  pyproject.toml
notebooks/: train.ipynb
src/deepsink/scripts/: data_gen.py  data_pipe.py  data_upload.py  train.ipynb
