[project]
name = "DeepSink"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "yanli", email = "mail@yanli.one"},
]
dependencies = ["huggingface-hub>=0.28.1", "datasets>=3.2.0", "pandas>=2.2.3", "typer>=0.15.1", "openai>=1.61.0"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
