[project]
name = "DeepSink"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "yanli", email = "mail@yanli.one"},
]
dependencies = ["huggingface-hub>=0.28.1", "datasets>=3.2.0", "pandas>=2.2.3", "typer>=0.15.1", "openai>=1.61.0", "transformers>=4.48.2", "unsloth>=2025.1.8", "torch>=2.6.0", "autoawq>=0.2.7.post3", "python-dotenv>=1.0.1"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/LLaMA-Factory#egg=llamafactory[metrics,torch]",
]
